# perception_classifiers

./: CMakeLists.txt  README  con.config  config.txt  exp.config  package.xml  stopwords_en.txt  todo.txt
data/: extracted_feature_color.csv  extracted_feature_fpfg.csv  extracted_feature_fpfh.csv  finger_position_vector.csv  object_list.csv  pics_vgg_fc7.csv
data/audio/drop_audio/: dft_extracted_features.csv
data/audio/grasp_audio/: dft_extracted_features.csv
data/audio/hold_audio/: dft_extracted_features.csv
data/audio/lift_audio/: dft_extracted_features.csv
data/audio/look_audio/: dft_extracted_features.csv
data/etc/: behaviour_modalities_list.csv  meta_move_features.py  move_features.py  object_list.csv  write_config.py
data/obj0/look/color/: features.csv
exp/: log_summary.csv  object_utterances.csv  survey_responses.csv
launch/: robot_ispy.launch  robot_obj_id.launch
paper/: conclusion.tex  dataset.tex  diff.tex  experiment.tex  gll.tex  ijcai16.tex  implementation.tex  introduction.tex  methodology.tex  mmp.tex  qualitative.tex  relatedwork.tex  results.tex  taskdefinition.tex
src/: AbstractPolicy.py  HISBeliefState.py  InquisitiveIspyAgent.py  IspyAgent.py  Knowledge.py  ORAgent.py  Partition.py  Policy.py  PomdpIspyAgent.py  PomdpKtdqPolicy.py  SummaryState.py  SystemAction.py  UnitTestAgent.py  Utterance.py  agent_io.py  analyze_predicates.py  classifier_services.cpp  extract_labels.py  extract_new_preds.py  fetch_features_service.cpp  generate_inquisitive_subject_conditions.py  grab_pictures.py  ispy.py  ispyRetrain.py  ispyServer.py  make_csv_from_logs.py  obj_ret.py  predicate_performance.py  prepare_next_fold.py  python_classifier_services.py  run_inquisitive_subject.py  run_leave_one_out_xval.py  run_leave_one_out_xval_behaviors.py  stopwords_en.txt  summarize_results.py  test_artificial_agent.py  test_inquisitive_agent.py  unit_test.py  utils.py
srv/: FetchAllFeatures.srv  FetchFeatures.srv  PythonRunClassifier.srv  PythonUpdateClassifiers.srv  getFreeClassifierID.srv  getPoint.srv  getSay.srv  runClassifier.srv  startDialog.srv  trainClassifier.srv
subjects_testing/: analyze_csv.py  artificial_results.txt  averages.csv  averages.txt  correlations.py  extract_from_logs.py  measurements.csv  object_utterances.csv  predicate_metrics.csv  predicate_results_tables.txt  results_tables.txt  xval_predicate_behavior_confusion_matrices.csv  xval_predicate_metrics.csv  xval_results.txt
subjects_testing/artificial/: unify_cross_validation.py
user_exp/: experiment_instructions.txt  instructions.tex  operator_instructions.tex
www/: con_preds_results.txt  con_xval_preds_results.txt  display_results.php  exp_preds_results.txt  exp_xval_preds_results.txt  get_mturk_code.php  ispy.php  new_session.php  randomize_objects.php  robot_scribe.php  write_user_input.php
www/pickles/: 3004.agent.previous  3005.agent.previous  3006.agent.previous  3007.agent.previous  3008.agent.previous  3009.agent.previous  4001.agent.previous  4002.agent.previous  4003.agent.previous  4004.agent.previous  5000.agent.previous  5001.agent.previous  5002.agent.previous  5003.agent.previous  5004.agent.previous  5005.agent.previous  synpol.local.agent
(+820 files in other folders)
