<?xml version="1.0"?>
<package format="2">
  <name>perception_classifiers</name>
  <version>0.0.0</version>
  <description>
    Perceptual classifeirs for the Building-Wide Intelligence
    project of the University of Texas at Austin.
  </description>

  <author email="thomason.jesse@gmail.com">Jesse Thomason</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bwi_kr_execution</depend>
  <depend>bwi_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
